--- a/about-us.html
+++ b/about-us.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cognify</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="site-header">
         <div class="container">
             <!-- Logo on the left end -->
-            <img src="D:\Downloads\Website\Assets\COGNIFY.png" alt="Cognify Logo" class="logo">
+            <img src="Assets/COGNIFY.png" alt="Cognify Logo" class="logo">
 
             <!-- Navigation links on the right end -->
             <nav class="main-nav">
                 <ul class="nav-menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Crew</a></li>
+                    <!-- Updated anchor links to redirect to index.html sections -->
+                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="index.html#services">Services</a></li>
+                    <li><a href="index.html#about-us">Crew</a></li>
                     <li class="hire-us">
-                        <a href="#">
-                            <img src="D:\Downloads\Website\Assets\Link.png" alt="Hire Us">
+                        <a href="index.html#contact">
+                            <img src="Assets/Link.png" alt="Hire Us">
                         </a>
                     </li>
                 </ul>
@@ -28,19 +29,20 @@
         </div>
     </header>
 
-
-    <section class="hero">
+    <!-- About Us Section -->
+    <section id="about-us" class="about-us">
         <div class="container">
-            <div class="hero-image">
-                <img src="D:\Downloads\Website\Assets\About_detailed.png" alt="Hero Image">
+            <div class="about-us-image">
+                <img src="Assets/About_detailed.png" alt="About Us">
             </div>
         </div>
     </section>
 
+    <!-- Footer -->
     <footer class="site-footer">
         <div class="container">
             <div class="footer-image">
-                <img src="D:\Downloads\Website\Assets\footer1.png" alt="Footer Image">
+                <img src="Assets/footer1.png" alt="Footer Image">
             </div>
         </div>
     </footer>
