--- a/about-us.html
+++ b/about-us.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html#services">Services</a></li>
                     <li><a href="index.html#about-us">Crew</a></li>
                     <li class="hire-us">
-                        <a href="index.html#contact">
+                        <a href="index.html#cta">
                             <img src="Assets/Link.png" alt="Hire Us">
                         </a>
                     </li>
